# leviculum

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Justfile  README.md  deny.toml
.cargo/: config.toml
lblogd/: Cargo.toml  README.md
lblogd/src/: cli.rs  config.rs  lib.rs  main.rs  node.rs  post.rs  render.rs  web.rs
lblogd/tests/: end_to_end.rs  micron_roundtrip.rs  node_integ.rs  post_model.rs  render_html.rs
leviculum-core/fuzz/: Cargo.toml  README.md
leviculum-core/fuzz/fuzz_targets/: announce_from_packet.rs  discovery_announce.rs  hdlc_deframe.rs  ifac_verify.rs  kiss_deframe.rs  packet_unpack.rs  resource_advertisement_unpack.rs
leviculum-micron/: Cargo.toml
leviculum-micron/src/: color.rs  lib.rs  model.rs  parser.rs
leviculum-micron/tests/: parser_tests.rs
leviculum-std/: Cargo.toml
leviculum-std/examples/: chat.rs  echo_server.rs  link_integration_test.rs  link_test.rs  relay_daemon.rs  simple_send.rs
leviculum-std/fuzz/: Cargo.toml  README.md
leviculum-std/fuzz/fuzz_targets/: sam_parse.rs
leviculum-std/src/: autoconnect.rs  clock.rs  config.rs  discovery.rs  error.rs  event_log.rs  file_identity_store.rs  file_known_destinations_store.rs  file_packet_hash_store.rs  file_ratchet_store.rs  fuzz.rs  ini_config.rs  known_destinations.rs  lib.rs  remote_status.rs  resource_policy.rs  reticulum.rs  storage.rs  sync_ext.rs
leviculum-std/src/api/: mod.rs
leviculum-std/src/driver/: builder.rs  mod.rs  remote_mgmt.rs  sender.rs  stream.rs
leviculum-std/src/interfaces/: airtime.rs  duty_cycle.rs  hdlc.rs  kiss.rs  local.rs  mod.rs  netdevice.rs  pipe.rs  rnode.rs  serial.rs  tcp.rs  udp.rs
leviculum-std/src/rpc/: connection.rs  handlers.rs  mod.rs  pickle.rs
leviculum-std/src/test_support/: event_log.rs  mod.rs  tracing_setup.rs  warn_capture.rs
leviculum-std/tests/: discovery_autoconnect.rs  event_log_multiprocess.rs  event_log_subscriber.rs  jl_filter.rs  jl_jldiff_fixtures.rs  jl_jldiff_workflow.rs  jldiff_compare.rs  obs_ann_tx_drop_events.rs  transport_fanout_bench.rs
leviculum-std/tests/mvr/: client_wait_for_path_request_fallback.rs  link_failure_recovery_silent_resume.rs  lncp_fetch_rust_responder.rs  main.rs  responder_close_delivery.rs  rust_client_path_install_from_python.rs  rust_client_path_install_loop_race.rs  rust_client_path_install_via_relay.rs  rust_client_path_install_with_own_echo.rs
leviculum-std/tests/rnsd_interop/: announce_interop_tests.rs  auto_interop_tests.rs  backbone_interop_tests.rs  blackhole_interop_tests.rs  channel_tests.rs  common.rs  comprehensive_network_test.rs  discovery_interop_tests.rs  discovery_tests.rs  edge_case_tests.rs  encryption_tests.rs  flood_tests.rs  flow_tests.rs  group_crypto_tests.rs  harness.rs  held_announce_interop_tests.rs  ifac_interop_tests.rs  interface_mode_tests.rs  lifecycle_tests.rs  link_keepalive_close_tests.rs  link_manager_tests.rs  link_tests.rs  lnomad_fetch_interop_tests.rs  loadtest_tcp_hub_tests.rs  lrproof_hop_undercount_interop_tests.rs  main.rs  mtu_tests.rs  multihop_tests.rs  node_api_tests.rs  nomad_page_tests.rs  path_gap_tests.rs  path_recovery_tests.rs  pipe_interop_tests.rs  plain_broadcast_tests.rs  probe_tests.rs  proof_tests.rs  protocol_tests.rs  python_parity_tests.rs  python_rnstatus_server_tests.rs  ratchet_rotation_tests.rs  (+20 more)
lnomad/: Cargo.toml  README.md
lnomad/src/: bookmarks.rs  browser.rs  cli.rs  color.rs  discovery.rs  download.rs  fetch.rs  identify.rs  identity.rs  lib.rs  main.rs  page_cache.rs  render.rs  theme.rs  tui.rs  url.rs
lnomad/tests/: fetch_integ.rs  render_golden.rs
lnomad/tests/fixtures/: golden_80_color.ansi  golden_80_plain.txt  sample.mu
reticulum-core/: Cargo.toml
reticulum-core/src/: announce.rs  destination.rs  embedded_storage.rs  lib.rs  packet.rs  transport.rs
reticulum-core/src/framing/: kiss.rs
reticulum-core/src/link/: mod.rs
reticulum-core/tests/: embedded_eviction_alloc.rs  heap_fragmentation.rs  heap_leak.rs  heap_leak_mgmt.rs
reticulum-ffi/: Cargo.toml  Makefile  build.rs  cbindgen.toml  leviculum.pc.in  reticulum.h
reticulum-ffi/src/: destination.rs  diagnostics.rs  error.rs  events.rs  identity.rs  lib.rs  link.rs  log.rs  node.rs  request.rs  resource.rs
reticulum-ffi/tests/: event_projection_coverage.rs  fault_coverage.rs  ffi_c_tests.rs  ffi_faults.rs  ffi_integration.rs  ffi_interop.rs  ffi_property.rs  ffi_unit.rs  guard_coverage.rs
reticulum-integ/: Cargo.toml  Dockerfile  entrypoint.sh
reticulum-integ/profiles/: devices.toml
reticulum-integ/scripts/: lnomad_identify_acceptance.sh  lnomad_identify_responder.py  lnomad_nomadnet_acceptance.sh  lns_diag_no_secret.sh  lxmf_node.py  rnid_retain.sh  rnpath_known_dest.sh
reticulum-integ/src/: compose.rs  executor.rs  lib.rs  lxmf.rs  main.rs  paths.rs  runner.rs  timeout.rs  topology.rs  window_policy.rs
reticulum-integ/tests/: bench_dual_pair_fast.toml  bench_dual_pair_medium.toml  bench_dual_pair_medium_ca.toml  bench_dual_pair_slow.toml  bench_dual_pair_slow_ca.toml  bench_single_pair_fast.toml  bench_single_pair_medium.toml  bench_single_pair_medium_ca.toml  bench_single_pair_medium_ca_rnode_only.toml  bench_single_pair_medium_rnode_only.toml  bench_single_pair_slow.toml  bench_single_pair_slow_ca.toml  bench_single_pair_slow_ca_rnode_only.toml  binary_freshness_preflight.rs  c_api_restart_recovery.toml  five_node_mesh.toml  lncp_silent.toml  lnode_instrumentation.rs  lns_diag.toml  lora_3node_bidir.toml  lora_3node_contention.toml  lora_3node_transfer.toml  lora_4node_contention_mixed.toml  lora_4node_contention_python.toml  lora_4node_contention_rust.toml  lora_4node_sequential_python.toml  lora_direct_rust.toml  lora_dual_cluster_mixed.toml  lora_dual_cluster_rust.toml  lora_interop_rust_python.toml  lora_late_announce_10node.toml  lora_late_announce_2node.toml  lora_late_announce_4node.toml  lora_late_announce_6node.toml  lora_late_announce_8node.toml  lora_link_interop.toml  lora_link_python.toml  lora_link_rust.toml  lora_link_teardown.toml  lora_lncp_auth.toml  (+60 more)
reticulum-proxy/: Cargo.toml
(+369 files in other folders)
