[workspace]
resolver = "2"
members = [
    "reticulum-core",
    "reticulum-std",
    "reticulum-ffi",
    "reticulum-cli",
    "reticulum-integ",
    "reticulum-proxy",
]

# reticulum-nrf requires cross-compilation (thumbv7em-none-eabihf) and
# cannot build with --workspace on the host.
# Build with: cargo build -p reticulum-nrf --target thumbv7em-none-eabihf
exclude = ["reticulum-nrf"]

[workspace.package]
version = "0.9.0+ciris.1"
edition = "2021"
authors = ["Lew Palm"]
license = "AGPL-3.0-or-later"
repository = "https://codeberg.org/Lew_Palm/leviculum"
homepage = "https://codeberg.org/Lew_Palm/leviculum"
description = "Rust implementation of the Reticulum network stack"

[workspace.dependencies]
# Core crypto dependencies (no_std compatible)
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
aes = { version = "0.8", default-features = false }
cbc = { version = "0.1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
md-5 = { version = "0.10" }
hkdf = { version = "0.12", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

# std dependencies
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
rmpv = "1"
serde-pickle = "1"
toml = "0.8"
thiserror = "2"
bytes = "1"

# Compression (no_std compatible)
libbz2-rs-sys = { version = "0.2", default-features = false, features = ["rust-allocator"] }

# Networking
if-addrs = { version = "0.15", features = ["link-local"] }
socket2 = { version = "0.6", features = ["all"] }

# FFI
libc = "0.2"

# Testing
proptest = "1"

# Crypto libs are unusably slow without optimizations (constant-time field
# arithmetic, scalar multiplication). Build them at max opt even in debug.
[profile.dev.package.curve25519-dalek]
opt-level = 3
[profile.dev.package.ed25519-dalek]
opt-level = 3
[profile.dev.package.x25519-dalek]
opt-level = 3

# Strip debug info (not symbols) at link time. Rustc passes the right
# flags per target, which avoids the post-link `strip --strip-all` that
# cargo-deb runs by default — that one corrupted x86_64 musl-static
# binaries (segfault at startup, see commit history). "debuginfo" keeps
# the symbol table, so panic backtraces still show function names.
# .deb builds pair this with `cargo deb --no-strip` in
# .woodpecker/nightly.yml so cargo-deb's strip is skipped entirely.
[profile.release]
strip = "debuginfo"
# Pin unwinding (already the default). The reticulum-ffi cdylib relies on
# catch_unwind at every extern "C" boundary so a Rust panic becomes an error
# code instead of unwinding into C (undefined behaviour). panic = "abort"
# would make catch_unwind a no-op and turn any internal panic into a process
# abort of the host application embedding libleviculum, which a library must
# never do. This forecloses an abort-for-size option on the daemons; that is
# the intended tradeoff. Behaviour-preserving since unwind is already default.
panic = "unwind"
