[package]
name = "lblogd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dev-blog server: serves Markdown posts over HTTP/HTTPS and as a NomadNet node"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
leviculum-core = { path = "../leviculum-core" }
leviculum-std = { path = "../leviculum-std" }
axum.workspace = true
axum-server.workspace = true
futures.workspace = true
pulldown-cmark.workspace = true
rmpv.workspace = true
rustls-acme.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
leviculum-micron = { path = "../leviculum-micron" }
lnomad = { path = "../lnomad" }
hex = "0.4"
tempfile = "3"
tower.workspace = true

[lib]
name = "lblogd"
path = "src/lib.rs"

[[bin]]
name = "lblogd"
path = "src/main.rs"
