[package]
name = "lnomad"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal browser and ANSI renderer for NomadNet micron pages"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
leviculum-micron = { path = "../leviculum-micron" }
leviculum-std = { path = "../leviculum-std" }
leviculum-core = { path = "../leviculum-core" }
rmpv.workspace = true
thiserror.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
terminal_size = "0.4"

[dev-dependencies]
tempfile = "3"
hex = "0.4"

[lib]
name = "lnomad"
path = "src/lib.rs"

[[bin]]
name = "lnomad"
path = "src/main.rs"
