[package]
name = "lnomad"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal browser and ANSI renderer for NomadNet micron pages"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
leviculum-micron = { path = "../leviculum-micron" }
leviculum-std = { path = "../leviculum-std" }
leviculum-core = { path = "../leviculum-core" }
rmpv.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
clap = { version = "4", features = ["derive"] }
terminal_size = "0.4"
ratatui = "0.30.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
unicode-width = "0.2.2"
futures = "0.3.32"
tui-input = "0.15"
termbg = "0.6.2"
open = "5"

[dev-dependencies]
tempfile = "3"
hex = "0.4"

[lib]
name = "lnomad"
path = "src/lib.rs"

[[bin]]
name = "lnomad"
path = "src/main.rs"
