[package]
name = "reticulum-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for reticulum - no_std compatible"

[features]
default = ["tracing"]
# No std feature - reticulum-core is always no_std
compression = ["dep:libbz2-rs-sys"]
# `tracing` is optional so the crate builds on atomic-less MCUs (Cortex-M0 /
# thumbv6m), where tracing-core's CAS-based callsite registry does not compile.
# With the feature off, the level macros become no-ops via the `tracing` shim
# in lib.rs. Build the M0 target with `--no-default-features`.
tracing = ["dep:tracing"]

[dependencies]
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
aes.workspace = true
cbc.workspace = true
sha2.workspace = true
hmac.workspace = true
hkdf.workspace = true
rand_core.workspace = true
tracing = { workspace = true, optional = true }
heapless = { version = "0.8", default-features = false }
libbz2-rs-sys = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
# OsRng is needed for tests (only available with getrandom feature)
rand_core = { version = "0.6", features = ["getrandom"] }
