[package]
name = "reticulum-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for reticulum - no_std compatible"

[features]
default = ["tracing"]
# No std feature - reticulum-core is always no_std
compression = ["dep:libbz2-rs-sys"]
# `tracing` is optional so the crate builds on atomic-less MCUs (Cortex-M0 /
# thumbv6m), where tracing-core's CAS-based callsite registry does not compile.
# With the feature off, the level macros become no-ops via the `tracing` shim
# in lib.rs. Build the M0 target with `--no-default-features`.
tracing = ["dep:tracing"]

[dependencies]
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
aes.workspace = true
cbc.workspace = true
sha2.workspace = true
hmac.workspace = true
hkdf.workspace = true
rand_core.workspace = true
tracing = { workspace = true, optional = true }
heapless = { version = "0.8", default-features = false }
libbz2-rs-sys = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
# OsRng is needed for tests (only available with getrandom feature)
rand_core = { version = "0.6", features = ["getrandom"] }
# Capture structured tracing output in mvr tests to prove the exact drop reason.
tracing-subscriber.workspace = true
# Host-side replay of the firmware's real allocator for the #65 fragmentation
# harness. Same crate/version the firmware links (reticulum-nrf). `llff` only:
# the firmware uses LlffHeap. `critical-section/std` supplies the lock impl the
# heap needs on the host (the firmware supplies its own single-core impl).
embedded-alloc = { version = "0.7", default-features = false, features = ["llff"] }
critical-section = { version = "1", features = ["std"] }
