[package]
name = "reticulum-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "C-API/FFI bindings for reticulum"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
reticulum-core = { path = "../reticulum-core", default-features = true }
reticulum-std = { path = "../reticulum-std" }
libc.workspace = true
tokio.workspace = true
rand_core.workspace = true

[build-dependencies]
# default-features off drops cbindgen's only default feature, `clap` (its
# standalone CLI) — build.rs uses just the `cbindgen::Builder` library API.
# This removes clap + anstream/anstyle*/strsim/colorchoice from the build
# graph entirely (they were only here for cbindgen's unused CLI).
cbindgen = { version = "0.27", default-features = false }

# reticulum-ffi is a stub/orphaned crate (§9.2 of CLEANUP_NOTES) —
# dependencies sit in Cargo.toml even though the stub does not import
# them, in anticipation of the planned redesign.
[package.metadata.cargo-machete]
ignored = ["libc", "reticulum-std"]
