[package]
name = "reticulum-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "C-API/FFI bindings for reticulum"

[lib]
# Output libleviculum.so / libleviculum.a so the link flag is -lleviculum.
name = "leviculum"
crate-type = ["cdylib", "staticlib"]

[dependencies]
reticulum-std = { path = "../reticulum-std" }
tokio = { workspace = true }

[build-dependencies]
cbindgen = "0.27"
