[package]
name = "reticulum-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "KISS-aware serial proxy for LoRa fault injection testing"

[lib]
name = "lora_proxy"
path = "src/lib.rs"

[[bin]]
name = "lora-proxy"
path = "src/main.rs"

[dependencies]
reticulum-core = { path = "../reticulum-core" }
tokio = { workspace = true }
tokio-serial = { workspace = true }
nix = { version = "0.29", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# default-features off (matches reticulum-cli) so clap's `color`/`suggestions`
# transitive deps (anstream/anstyle*/strsim) stay out of the workspace graph —
# cargo unifies clap features, so both clap users must agree to drop them.
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
] }
